BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Cycle_Plan_Target_vod__c.object
<CustomObject>
    <description>The Cycle Plan Target is an Account that is included in a Cycle Plan.</description>
    <fields>
        <fullName>Active_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013: New formula field to know if the Cycle Plan is active. To be used from reports.</description>
        <formula>Cycle_Plan_vod__r.Active_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the user has made to date against his/her targeted accounts (populated automatically)</description>
        <label>Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Algorithm_Products_BMS_CN__c</fullName>
        <description>The product(s) for segmentation calculation per user per account.</description>
        <label>Algorithm Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attainment_vod__c</fullName>
        <formula>IF(Planned_Calls_vod__c &gt; 0,  Actual_Calls_vod__c  /  Planned_Calls_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Call_Durations_BMS_CN__c</fullName>
        <description>For BMS CHINA Medical Report purpose. don&apos;t display in UI 
Calculate duration # Days for all interactions. 
8 hours = 1 day 
Updated by night batch job</description>
        <label>Call Durations</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that is a target for this Cycle Plan.</description>
        <label>Target</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cycle Plan Targets</relationshipLabel>
        <relationshipName>Cycle_Plan_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_vod__c</fullName>
        <description>The Cycle Plan of which this account is part of.</description>
        <label>Cycle Plan</label>
        <referenceTo>Cycle_Plan_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Targets</relationshipLabel>
        <relationshipName>Cycle_Plan_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dr_Level_BMS_CN__c</fullName>
        <label>Dr Level</label>
        <picklist>
            <picklistValues>
                <fullName>VH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HP_Dr_Level_BMS_CN__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>To identify HP Dr Level which different with other BU.
Since SFDC do NOT support groupable by custom number field, have to create a text field and update by workflow from planned_call_vod__c.</description>
        <label>HP Dr Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_Usage_Level_BMS_CN__c</fullName>
        <formula>TEXT(Cycle_Plan_Account_vod__r.HP_Usage_Level_BMS_CN__c)</formula>
        <label>HP Usage Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_BMS_CN__c</fullName>
        <formula>Cycle_Plan_Account_vod__r.Primary_Parent_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hospital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name_Last_First_BMS_EMEA__c</fullName>
        <formula>Cycle_Plan_Account_vod__r.Formatted_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name (Last,First)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Planned_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the user was supposed to make according to the original Cycle Plan, before any updates were made by the user</description>
        <label>Original Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the user is supposed to make during the Cycle Plan’s time period</description>
        <label>Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Schedule_vod__c</fullName>
        <description>Count of Remaining Scheduled Calls</description>
        <formula>Planned_Calls_vod__c  -  Scheduled_Calls_vod__c -  Actual_Calls_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Schedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_vod__c</fullName>
        <description>The remaining number of calls the user must complete in the Cycle Plan period to achieve their planned call objective for the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Planned_Calls_vod__c),ISBLANK(Actual_Calls_vod__c)),0
                  ,IF(ISBLANK(Actual_Calls_vod__c) ,Planned_Calls_vod__c 
                      , IF(ISBLANK(Planned_Calls_vod__c ),0
                            , IF((Planned_Calls_vod__c  -Actual_Calls_vod__c )&gt;=0,Planned_Calls_vod__c  -Actual_Calls_vod__c ,0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of calls scheduled by the user against the Cycle Plan Target.</description>
        <label>Scheduled Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialty_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013: Field created in order to bring the specialty from the account object. To be used from Reports.</description>
        <formula>Cycle_Plan_Account_vod__r.Specialty_BMS_EMEA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TL_Level_BMS_CN__c</fullName>
        <description>To get values for TL level of target
For generate report purpose.</description>
        <formula>text(Cycle_Plan_Account_vod__r.TL_Level_New_BMS_CN__c)</formula>
        <label>TL Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Nov-2014: The Territory from the Cycle Plan this Cycle Plan Target belongs to. Used in the trigger BMS_EMEA_UpdateTargets</description>
        <formula>Cycle_Plan_vod__r.Territory_vod__c</formula>
        <inlineHelpText>The Territory from the Cycle Plan this Cycle Plan Target belongs to</inlineHelpText>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the team has made to date against his/her targeted accounts</description>
        <label>Actual Total Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Attainment_vod__c</fullName>
        <formula>IF(Total_Planned_Calls_vod__c&gt;0, Total_Actual_Calls_vod__c/Total_Planned_Calls_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of calls the team is supposed to make during the Cycle Plan’s time period</description>
        <label>Planned Total Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_Schedule_vod__c</fullName>
        <description>Total Count of Remaining Scheduled calls</description>
        <formula>Total_Planned_Calls_vod__c -  Total_Scheduled_Calls_vod__c  -  Total_Actual_Calls_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Remaining Schedule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_vod__c</fullName>
        <description>The remaining number of calls the team must complete in the Cycle Plan period to achieve their planned call objective for the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Total_Planned_Calls_vod__c ),ISBLANK(Total_Actual_Calls_vod__c)),0
                  ,IF(ISBLANK(Total_Actual_Calls_vod__c) ,Total_Planned_Calls_vod__c 
                      , IF(ISBLANK(Total_Planned_Calls_vod__c ),0
                            , IF((Total_Planned_Calls_vod__c -Total_Actual_Calls_vod__c)&gt;=0,
                                     Total_Planned_Calls_vod__c -Total_Actual_Calls_vod__c,
                                     0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Calls_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of calls scheduled against the Cycle Plan Target by the team of representatives calling on that account.</description>
        <label>Scheduled Total Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Cycle_Plan_vod__r.Owner_Lookup_BMS_CORE__r.User_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visited_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>if visited =1, else =0</description>
        <label>Visited</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZS_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>ZS External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zvod_ACCOUNT_Main_Institution_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BMS ACN - August Mini Release 2016 - Marker Field to populate the Main Institution at Cycle Plan Target Level.</description>
        <label>Main Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cycle Plan Targets (Main Institution)</relationshipLabel>
        <relationshipName>Cycle_Plan_Targets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zvod_ACCOUNT_Primary_Parent_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cycle Plan Targets (Primary Parent)</relationshipLabel>
        <relationshipName>Cycle_Plan_Targets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zvod_Display_Product_Details_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If placed on the page layout , then the product detail columns will be displayed in the target list.</description>
        <label>zvod Display Product Details</label>
        <type>Checkbox</type>
    </fields>
    <label>Cycle Plan Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPT-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Plan Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PlannedCallsLessThan0</fullName>
        <active>true</active>
        <description>Planned Calls can not be less than 0.</description>
        <errorConditionFormula>Planned_Calls_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Planned_Calls_vod__c</errorDisplayField>
        <errorMessage>Planned Calls can not be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Trarget_vod</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Cycle_Plan_Account_vod__c ) = true</errorConditionFormula>
        <errorMessage>Please specify a Target Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TotalPlannedCallsLessThan0</fullName>
        <active>true</active>
        <description>Total Planned Calls can not be less than 0.</description>
        <errorConditionFormula>Total_Planned_Calls_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Planned_Calls_vod__c</errorDisplayField>
        <errorMessage>Total Planned Calls can not be less than 0.</errorMessage>
    </validationRules>
</CustomObject>